<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/poke_detail_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

    <ImageView
        android:id="@+id/poke_detail_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_favorite_24" />

    <androidx.cardview.widget.CardView
        android:id="@+id/poke_detail_card"
        android:layout_width="300dp"
        android:layout_height="400dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/poke_detail_back"
        android:background="@drawable/grad"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:padding="10dp"
            android:background="@color/my"

            >

            <TextView
                style="@style/textStyle"
                android:layout_marginTop="100dp"
                android:id="@+id/poke_detail_name"
                android:textStyle="bold"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@id/poke_detail_id_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Pika" />

            <TextView
                style="@style/textStyle"
                android:id="@+id/poke_detail_id_label"
                android:labelFor="@id/poke_detail_id_subject"
                android:text="@string/id"
                app:layout_constraintBottom_toTopOf="@id/poke_detail_height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/poke_detail_name" />

            <TextView
                style="@style/textStyle"
                android:id="@+id/poke_detail_id_subject"

                app:layout_constraintBottom_toTopOf="@id/poke_detail_height_subject"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/poke_detail_name"
                tools:text="#001023" />

            <TextView
                style="@style/textStyle"
                android:id="@+id/poke_detail_height"

                android:labelFor="@id/poke_detail_height_subject"
                android:text="@string/height"
                app:layout_constraintBottom_toTopOf="@id/poke_detail_weight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/poke_detail_id_label" />

            <TextView
                style="@style/textStyle"
                android:id="@+id/poke_detail_height_subject"

                app:layout_constraintBottom_toTopOf="@+id/poke_detail_id_subject"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/poke_detail_weight_subject"
                tools:text="7.8" />

            <TextView
                style="@style/textStyle"
                android:id="@+id/poke_detail_weight"
                android:labelFor="@id/poke_detail_height_subject"
                android:text="@string/weight"
                app:layout_constraintBottom_toTopOf="@id/poke_detail_is_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/poke_detail_height" />

            <TextView
                style="@style/textStyle"
                android:id="@+id/poke_detail_weight_subject"
                app:layout_constraintBottom_toTopOf="@id/poke_detail_is_default_subject"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/poke_detail_height_subject"
                tools:text="76" />

            <TextView
                style="@style/textStyle"
                android:id="@+id/poke_detail_is_default"
                android:labelFor="@id/poke_detail_is_default_subject"
                android:text="@string/is_default"
                app:layout_constraintBottom_toTopOf="@id/poke_detail_base_exp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/poke_detail_weight" />

            <TextView
                style="@style/textStyle"
                android:id="@+id/poke_detail_is_default_subject"
                app:layout_constraintBottom_toTopOf="@id/poke_detail_base_exp_subject"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/poke_detail_weight_subject"
                tools:text="True" />

            <TextView
                style="@style/textStyle"
                android:id="@+id/poke_detail_base_exp"
                android:labelFor="@id/poke_detail_base_exp_subject"
                android:text="@string/base_exp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/poke_detail_is_default" />

            <TextView
                style="@style/textStyle"
                android:id="@+id/poke_detail_base_exp_subject"
                app:layout_constraintBottom_toTopOf="@id/poke_detail_base_exp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/poke_detail_base_exp"
                tools:text="1009" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>